fixed menu overlap

--- a/custom.css
+++ b/custom.css
@@ -35,7 +35,6 @@ a:hover {
 
 #cta-bg {
   background: beige;
-  height: 70vh;
 }
 
 /*Chef Nick */
